# git-utils

./: .rumdl.toml  Cargo.toml  DEVELOPERS.md  LICENSE  Makefile.toml  README.md  THIRD-PARTY-LICENSES.md  about.toml  commitlint.toml  license-template.hbs
.claude/: CLAUDE.md
.github/: pull_request_template.md
.github/workflows/: check-unused-deps-udeps.yml  ci.yml
crates/git-branch-delete/: Cargo.toml
crates/git-branch-delete/src/: main.rs
crates/git-branch-switch/: Cargo.toml
crates/git-branch-switch/src/: main.rs
crates/git-pr-merged/: Cargo.toml
crates/git-pr-merged/src/: main.rs
crates/git-repo/: Cargo.toml
crates/git-repo/src/: clone.rs  delete.rs  ls.rs  main.rs  utils.rs
crates/git-repos/: Cargo.toml
crates/git-repos/src/: clone.rs  ls.rs  main.rs  utils.rs
crates/git-utils/: Cargo.toml
crates/git-utils-core/: Cargo.toml  build.rs
crates/git-utils-core/src/: error.rs  git.rs  lib.rs
crates/git-utils/src/: main.rs  setup.rs
hooks/: commit-msg
