[package]
name = "git-branch-switch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "git-branch-switch"
path = "src/main.rs"

[dependencies]
git-utils-core = { workspace = true }
clap = { workspace = true }
inquire = { workspace = true }
anyhow = { workspace = true }
