[package]
name = "git-pr-merged"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "git-pr-merged"
path = "src/main.rs"

[dependencies]
git-utils-core = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
git2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
