[package]
name = "git-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "git-utils"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
